--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/Arekkusu17">Alex Fernández</a>.
+    Coded by <a href="https://github.com/Master229198112">Vishal Kumar Sharma</a>.
   </div>
 </footer>
 </body>
