--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </div>
   <footer>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/Master229198112">Vishal Kumar Sharma</a>.
+    Challenge by: <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by: <a href="https://github.com/Master229198112">Vishal Kumar Sharma</a>.
   </div>
 </footer>
 </body>
